# skshift

./: .gitignore  .pypirc  HowTo.md  LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.py
docs/: requirements.txt
docs/source/: api.rst  audits.rst  conf.py  explanationTutorial.rst  index.rst  installation.rst
skshift/: __init__.py  distributionshift.py
tests/: test_audit.py  test_explanationShift2.py  test_explanationshift.py  test_index.py  test_tutorial.py
