[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "skshift"
version = "0.01.3"
authors = [
  { name="Carlos Mougan", email="carmougan@gmail.com" },
]
description = "Explanation Shift"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmougan/skshift"
"Bug Tracker" = "https://github.com/cmougan/skshift/issues"