[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "skshift"
version = "0.01.4"
authors = [
  { name="**** ****", email="********@****.com" },
]
description = "Explanation Shift"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/c****/skshift"
"Bug Tracker" = "https://github.com/c****/skshift/issues"